Bug 522094 - HTML export fails to write linked images
Summary: HTML export fails to write linked images
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-24 01:54 UTC by Robby Stephenson
Modified: 2026-06-28 18:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2026-06-24 01:54:54 UTC
I have a custom collection with many pictures of the items saved as links (due to the large duplication that will result in saving the pictures in Tellico and in the filesystem). When I try to export to HTML with the “Export individual entries files” (which I assume will get the details of each item in the HTML) I get hundreds of warnings that Tellico could not write “name_of_picture_file” for each of the saved pictures. I have to either click OK on each warning or kill Tellico.

https://discuss.kde.org/t/html-export-issue/47470
Comment 1 Robby Stephenson 2026-06-28 18:47:17 UTC
Git commit f1e6b35bafee76b71148053ae305b4a8f59a611f by Robby Stephenson.
Committed on 28/06/2026 at 18:47.
Pushed by rstephenson into branch '4.2'.

Properly account for linked images when exporting HTML

The HTML exporter was trying to write linked images out as a new file
with a bad file name. No need to attempt to write at all.

Add a getter for GUI proxy sorry messages to allow unit tests to verify
that no messages were generated.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +55   -0    src/tests/htmlexportertest.cpp
M  +1    -0    src/tests/htmlexportertest.h
M  +8    -6    src/translators/htmlexporter.cpp
M  +6    -0    src/utils/guiproxy.cpp
M  +2    -0    src/utils/guiproxy.h

https://invent.kde.org/office/tellico/-/commit/f1e6b35bafee76b71148053ae305b4a8f59a611f
Comment 2 Robby Stephenson 2026-06-28 18:47:48 UTC
Git commit b06a10553b174690b968f3caf4e0ef05b9f6cbc0 by Robby Stephenson.
Committed on 28/06/2026 at 18:47.
Pushed by rstephenson into branch 'master'.

Properly account for linked images when exporting HTML

The HTML exporter was trying to write linked images out as a new file
with a bad file name. No need to attempt to write at all.

Add a getter for GUI proxy sorry messages to allow unit tests to verify
that no messages were generated.
FIXED-IN: 4.2.1

M  +4    -0    ChangeLog
M  +55   -0    src/tests/htmlexportertest.cpp
M  +1    -0    src/tests/htmlexportertest.h
M  +8    -6    src/translators/htmlexporter.cpp
M  +6    -0    src/utils/guiproxy.cpp
M  +2    -0    src/utils/guiproxy.h

https://invent.kde.org/office/tellico/-/commit/b06a10553b174690b968f3caf4e0ef05b9f6cbc0