Properly account for linked images when exporting HTML

The HTML exporter was trying to write linked images out as a new file
with a bad file name. No need to attempt to write at all.

Add a getter for GUI proxy sorry messages to allow unit tests to verify
that no messages were generated.

BUG: 522094
FIXED-IN: 4.2.1